--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
     <title>CV AlbertoCF</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
+    <link rel="manifest" href="manifest.json">
+    <meta name="theme-color" content="#43b883">
   </head>
   <body>
     <noscript>
