--- a/public/index.html
+++ b/public/index.html
@@ -17,5 +17,12 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script>
+      if ('serviceWorker' in navigator) {
+        window.addEventListener('load', function() {
+          navigator.serviceWorker.register('service-worker.js?'+Math.random()+'')
+        });
+      }
+      </script>
   </body>
 </html>
