--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
     <link rel="manifest" href="manifest.json">
-    <meta name="theme-color" content="#43b883">
+    <!-- <meta name="theme-color" content="#43b883"> -->
   </head>
   <body>
     <noscript>
@@ -17,12 +17,12 @@
     </noscript>
     <div id="app"></div>
     
-    <script>
+    <!-- <script>
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', function() {
           navigator.serviceWorker.register('service-worker.js?'+Math.random()+'')
         });
       }
-      </script>
+      </script> -->
   </body>
 </html>
