--- a/public/index.html
+++ b/public/index.html
@@ -9,20 +9,12 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
     <link rel="manifest" href="manifest.json">
-    <!-- <meta name="theme-color" content="#43b883"> -->
+    <meta name="theme-color" content="#33495e">
   </head>
   <body>
     <noscript>
       <strong>CV AlbertoCF. Gracias por visitar mi WEB!</strong>
     </noscript>
     <div id="app"></div>
-    
-    <!-- <script>
-      if ('serviceWorker' in navigator) {
-        window.addEventListener('load', function() {
-          navigator.serviceWorker.register('service-worker.js?'+Math.random()+'')
-        });
-      }
-      </script> -->
   </body>
 </html>
