--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#33495e">
+    <meta name="description" content="CV AlbertoCF">
   </head>
   <body>
     <noscript>
