--- a/public/index.html
+++ b/public/index.html
@@ -18,12 +18,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Zen+Dots&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Train+One&display=swap" rel="stylesheet">
 
-    <link rel="preload" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css"  as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <link rel="preload" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css"></noscript>
 
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#33495e">
-    <meta name="description" content="CV Alberto Carrasco Fernandez">
+    <meta name="description" content="CV Alberto Carrasco Fernández">
   </head>
   <body>
     <noscript>
@@ -32,3 +32,5 @@
     <div id="app"></div>
   </body>
 </html>
+
+
