--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
+    <meta name="google-site-verification" content="GHgJebY71jHfiHW_5Bnp9CGH5pq5soqUMCQN-Gb0cVk" />
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
@@ -30,6 +31,14 @@
       <strong>CV AlbertoCF. Gracias por visitar mi WEB!</strong>
     </noscript>
     <div id="app"></div>
+    
+    <script>//pregunta para isntalar app
+      if ('serviceWorker' in navigator) {
+        window.addEventListener('load', function() {
+          navigator.serviceWorker.register('service-worker.js?'+Math.random()+'')
+        });
+      }
+      </script>
   </body>
 </html>
 
